--- a/gb/19/10/11/n11582091.md
+++ b/gb/19/10/11/n11582091.md
@@ -1,57 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/woywz155/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/woywz155/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/woywz155/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/woywz155/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/woywz155/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/woywz155/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/woywz155/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/woywz155/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/woywz155/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/woywz155/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÁõÁÁ×ôÆØ¸¸°®ÀñÎï ¼ÇÂ¼¶ù×Ó14ËêÊ×´ÎÅÄÏ·</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/10/1910110244051487-600x400.jpg" />
-<h6>ÁõÁÁ×ô£¨×ó£©ÆØ¸¸°®ÀñÎï£¬¼ÇÂ¼¶ù×ÓÁõ×Óîý£¨ÖÐ£©14ËêµÚÒ»´ÎÅÄÏ·Ó°Ïñ£¬Í¼ÓÒÎªÌ«Ì«ÕÔÐ¡ÇÈ¡££¨°¢¶·¹¤×÷ÊÒÌá¹©£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tcgkzq3248/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tcgkzq3248/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tcgkzq3248/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tcgkzq3248/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>åˆ˜äº®ä½æ›çˆ¶çˆ±ç¤¼ç‰© è®°å½•å„¿å­14å²é¦–æ¬¡æ‹æˆ</h2>
+<a href="https://git.io/Jtbaj"><img width="600" src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/djtsp.jpg"title="è¿›å…¥åŽŸæ–‡è§‚çœ‹"  alt="è¿›å…¥åŽŸæ–‡è§‚çœ‹"></a><h3 align=center>(è§†é¢‘.å›½å†…å»ºè®®ä¸‹è½½<a href="https://github.com/tcgkzq3248/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>è¿›å…¥åŽŸæ–‡è§‚çœ‹)</h3>
+<h6>åˆ˜äº®ä½ï¼ˆå·¦ï¼‰æ›çˆ¶çˆ±ç¤¼ç‰©ï¼Œè®°å½•å„¿å­åˆ˜å­é“¨ï¼ˆä¸­ï¼‰14å²ç¬¬ä¸€æ¬¡æ‹æˆå½±åƒï¼Œå›¾å³ä¸ºå¤ªå¤ªèµµå°ä¾¨ã€‚ï¼ˆé˜¿æ–—å·¥ä½œå®¤æä¾›ï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê10ÔÂ11ÈÕÑ¶¡¿ÔÚÌ¨ÍåµçÊÓ½ç¼°¾ç³¡½ç±à¡¢µ¼¡¢ÑÝÈ«ÄÜµÄ´´×÷ÒÕÈË<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E5%88%98%E4%BA%AE%E4%BD%90.md">ÁõÁÁ×ô</a>£¬½ñ£¨11£©ÈÕ¹«²¼Òª¸ø¶ù×Ó<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E5%88%98%E5%AD%90%E9%93%A8.md">Áõ×Óîý</a>¾ªÏ²µÄÀñÎï£¬Ëû·ÑÊ±Á½ÄêÌæ¶ù×Ó¼ÇÂ¼14ËêµÚÒ»´ÎÅÄÉãÏ·¾ç¡¶<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E4%BD%A0%E7%9A%84%E5%AD%A9%E5%AD%90%E4%B8%8D%E6%98%AF%E4%BD%A0%E7%9A%84%E5%AD%A9%E5%AD%90.md">ÄãµÄº¢×Ó²»ÊÇÄãµÄº¢×Ó</a>¡ªÂèÂèµÄÒ£¿ØÆ÷¡·¹ý³Ì£¬µÀ¾¡ÎªÈË¸¸µÄ°®£¬Òý·¢ÍøÓÑ¹²Ãù¡£</p>
-<p><a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E5%88%98%E4%BA%AE%E4%BD%90.md">ÁõÁÁ×ô</a>Í¸Â¶£¬µ±Ê±¶ù×ÓÅÄÏ·Ê±²Å14Ëê£¬¶ø×Ô¼ºÔÚ14ËêÄÇÒ»ÄêÕý·ê¸¸Ç×¹ýÊÀ£¬Òò´Ëîýîý14ËêÕâÒ»Äê¶ÔËûÀ´Ëµ¸ñÍâµÄÓÐÒâÒå£¬Ò²ÓÐÒ»ÖÖËµ²»³öÀ´µÄ½ôÕÅ¡£<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E5%88%98%E5%AD%90%E9%93%A8.md">Áõ×Óîý</a>ÊÕµ½Õâ¸ö¾ªÏ²Ê±£¬Í¸Â¶×Ô¼ºÏàµ±¸Ð¶¯£¬¡°Ð»Ð»°Ö°ÖÕâÃ´°®ÎÒ£¬ÕâÃ´ÕÕ¹ËÎÒ£¡¡±</p>
-<figure id="attachment_11582119" style="width: 454px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/10/1910110244081487.jpg"><img class=" wp-image-11582119" title="" src="http://i.epochtimes.com/assets/uploads/2019/10/1910110244081487.jpg" alt="" width="454" b="605" /></a><figcaption class="wp-caption-text">Áõ×ÓîýÔÚ14ËêÄÇÒ»Äê²ÎÓëÏ·¾ç¡¶<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E4%BD%A0%E7%9A%84%E5%AD%A9%E5%AD%90%E4%B8%8D%E6%98%AF%E4%BD%A0%E7%9A%84%E5%AD%A9%E5%AD%90.md">ÄãµÄº¢×Ó²»ÊÇÄãµÄº¢×Ó</a>¡ªÂèÂèµÄÒ£¿ØÆ÷¡·µÄÅÄÉã¡££¨°¢¶·¹¤×÷ÊÒÌá¹©£©</figcaption></figure>
-<p>¼ÍÂ¼Æ¬µÄµÚÒ»¸öÄÚÈÝÊÇÁõÁÁ×ô½Ì¶ù×Ó<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E5%88%AE%E8%83%A1%E5%AD%90.md">¹Îºú×Ó</a>£¬µ±Ê±¸¸Ç×ÔÚËû14ËêÄÇÄê¹ýÊÀ£¬´ÓÀ´Ã»½ÌËû¹Îºú×Ó£¬¡°ÎÒ´ÓÐ¡¿´×Å¸¸Ç×¹Îºú×Ó£¬Ö®ºó¾Í×Ô¼ºÃþË÷¡£¡±ÁõÁÁ×ôÓÖËµ£¬¡°ÔÚ½Ìîýîý¹Îºú×Ó¹ý³ÌÖÐ¸ÐÊÜºÜ¶à£¬ÕâÊÇÒÔÇ°ÎÒËùÃ»¸ÐÊÜµ½µÄ¸¸×ÓÇ×ÃÜ½»Á÷Ê±¼ä¡£¡±</p>
-<p>Áõ×ÓîýÍ¸Â¶£¬<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E5%88%AE%E8%83%A1%E5%AD%90.md">¹Îºú×Ó</a>Õâ¼þÊÂÊÇÒ»¸öÄÐº¢³¤´óµÄ¹ý³Ì£¬¡°µ±Ê±°Ö°ÖÔÚ½ÌÎÒ¹Îºú×ÓÊ±£¬×Ô¼º»¹Òò²»ÊìÏ¤¹Îºúµ¶ÓÃ·¨²îÒ»µã°ÑÁ³¹ÎÁ÷Ñª£¡¡±</p>
-<p>¡°µÚÒ»´Î¿´µ½îýîýÍêÕû±íÑÝÊÇÔÚÏ·¾çµÄÊ×Ó³»á£¬¿´µ½×îºóÒ»¿Å¾µÍ·îýîýÔÚÓ©Ä»ÉÏ¿Þ²ÒÄ£Ñù£¬ÎÒµÄÑÛÀá¾ÍÅ¾Å¾Å¾µôÏÂÀ´ÁË£¬ÕâÒ»Ä»ÎÒÓÀÔ¶²»»áÍü¡£¡±ÁõÁÁ×ôÐÄÌÛ¶ù×ÓÒªÅÄÉã³¬¹ýËûÊµ¼ÊÄêÁäµÄ½ÇÉ«£¬ÔøÓÐ¹ýÉíÎª¸¸Ç×µÄµ£ÓÇ£¬·´¸´ÎÊ×Ô¼º£¬¡°Õâ¸ö½ÇÉ«¶ÔÓÚîýîýÀ´ËµÊÇ²»ÊÇÌ«ÔçÁË£¿¡±</p>
-<p>Áõ×ÓîýÍ¸Â¶£¬Á½ÄêÇ°°Ö°ÖÔø¶ÔËûËµ£¬¡°Äã³¤´óÁË£¬ÎÒ²»»áÔÙ³ÆÔÞÄãÁË¡£¡±Òò´Ë£¬µ±³õÑ¡ÔñÅÄÉã¡¶ÂèÂèµÄÒ£¿ØÆ÷¡·£¬Ï£ÍûÄÜÔÚ°Ö°ÖÒÑ¾­¹¤×÷30ÄêµÄÁìÓòÖÐ£¬ÓÃ×Ô¼ºµÄÁ¦Á¿»ñµÃ°Ö°ÖµÄ¿Ï¶¨¡£</p>
-<p>ÁõÁÁ×ô¿ªÐÄ¶ù×ÓÏíÊÜÅÄÏ·µÄ¹ý³Ì£¬×ß½øÕâ¸öÏ²»¶È´Ä°ÉúµÄÊÀ½ç£¬¡°ÎÒÖªµÀîýîý¸ú30ÄêÇ°µÄÎÒÒ»Ñù¿ªÊ¼°®ÉÏ±íÑÝÁË¡£¡±ÁõÁÁ×ôÌáÐÑ¶ù×Ó£¬ÒªÍê³ÉÒ»¸öºÃ×÷Æ·Ã»ÓÐ½Ý¾¶£¬ÒªÏñÖ¯Ò»¿éÆ¯ÁÁµÄ²¼²»Í£µØË¼¿¼ºÍ±àÖ¯²ÅÄÜÍêÕû¡£</p>
-<p>ËûÓÖËµ£¬ÔÚÅÄÉãÏÖ³¡¿´×Å¶ù×ÓÔÚÈËÐÐµÀ±¼ÅÜÁËÊýÊ®´Î£¬ÐÁ¿àÈ´²»º°ÀÛ£¬ÔÚÑô¹âÏÂÒÀ¾É³äÂúÁËÐ¦ÈÝ£¬Ï£Íû¶ù×ÓÄÜ¼ÇµÃÕâÒ»ÌìµÄ¹¤×÷×´Ì¬¡£</p>
-<p>´ËÍâ£¬±¾½ì½ðÖÓ½±£¬Áõ×ÓîýÒ²Óë¾ç×éÈËÔ±Ò»ÆðÌ¤ÉÏºìÌº£¬Ì¹ÑÔÕâÊÇÊ×´ÎÒÔ×Ô¼ºµÄÏ·¾ç×÷Æ·×ßÐÇ¹â´óµÀ£¬¼È½ôÕÅÓÖÐË·Ü£¬ÉÏÒ»´ÎÔòÊÇÈýÄêÇ°°Ö°ÖÈëÎ§¡¶Í­°åÉÙÄê¡·ÄÐÅä½Ç½±£¬Òò¹¤×÷²»¿Ë³öÏ¯£¬´úÌæ°Ö°Ö×ßºìÌº£¬Òò´ËÕâ´ÎµÄÐÄÇé±È½ÏÇáËÉ¡£</p>
-<p><center><a src=""></a><a href="https://git.io/JelRi"><img width="600" src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/djtsp.jpg" title="½øÈëÔ­ÎÄ¹Û¿´"  alt="½øÈëÔ­ÎÄ¹Û¿´"></a><h3 align=center>(ÊÓÆµ.¹úÄÚ½¨ÒéÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>½øÈëÔ­ÎÄ¹Û¿´)</h3><hr><a src="https://www.youtube.com/embed/81zxhhR97Jk?controls=0" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></p>
-<p>ÔðÈÎ±à¼­£ºÁºÃÎÖñ</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´10æœˆ11æ—¥è®¯ã€‘åœ¨å°æ¹¾ç”µè§†ç•ŒåŠå‰§åœºç•Œç¼–ã€å¯¼ã€æ¼”å…¨èƒ½çš„åˆ›ä½œè‰ºäºº<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E5%88%98%E4%BA%AE%E4%BD%90.md#1">åˆ˜äº®ä½</a>ï¼Œä»Šï¼ˆ11ï¼‰æ—¥å…¬å¸ƒè¦ç»™å„¿å­<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E5%88%98%E5%AD%90%E9%93%A8.md#1">åˆ˜å­é“¨</a>æƒŠå–œçš„ç¤¼ç‰©ï¼Œä»–è´¹æ—¶ä¸¤å¹´æ›¿å„¿å­è®°å½•14å²ç¬¬ä¸€æ¬¡æ‹æ‘„æˆå‰§ã€Š<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E4%BD%A0%E7%9A%84%E5%AD%A9%E5%AD%90%E4%B8%8D%E6%98%AF%E4%BD%A0%E7%9A%84%E5%AD%A9%E5%AD%90.md#1">ä½ çš„å­©å­ä¸æ˜¯ä½ çš„å­©å­</a>â€”å¦ˆå¦ˆçš„é¥æŽ§å™¨ã€‹è¿‡ç¨‹ï¼Œé“å°½ä¸ºäººçˆ¶çš„çˆ±ï¼Œå¼•å‘ç½‘å‹å…±é¸£ã€‚</p>
+<p><ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E5%88%98%E4%BA%AE%E4%BD%90.md#1">åˆ˜äº®ä½</a>é€éœ²ï¼Œå½“æ—¶å„¿å­æ‹æˆæ—¶æ‰14å²ï¼Œè€Œè‡ªå·±åœ¨14å²é‚£ä¸€å¹´æ­£é€¢çˆ¶äº²è¿‡ä¸–ï¼Œå› æ­¤é“¨é“¨14å²è¿™ä¸€å¹´å¯¹ä»–æ¥è¯´æ ¼å¤–çš„æœ‰æ„ä¹‰ï¼Œä¹Ÿæœ‰ä¸€ç§è¯´ä¸å‡ºæ¥çš„ç´§å¼ ã€‚<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E5%88%98%E5%AD%90%E9%93%A8.md#1">åˆ˜å­é“¨</a>æ”¶åˆ°è¿™ä¸ªæƒŠå–œæ—¶ï¼Œé€éœ²è‡ªå·±ç›¸å½“æ„ŸåŠ¨ï¼Œâ€œè°¢è°¢çˆ¸çˆ¸è¿™ä¹ˆçˆ±æˆ‘ï¼Œè¿™ä¹ˆç…§é¡¾æˆ‘ï¼â€</p>
+<figure id="attachment_11582119" style="width: 454px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/1910110244081487.jpg"><img class=" wp-image-11582119" title="" src="https://i.epochtimes.com/assets/uploads/2019/10/1910110244081487.jpg" alt="" width="454" b="605" /></a><figcaption class="wp-caption-text">åˆ˜å­é“¨åœ¨14å²é‚£ä¸€å¹´å‚ä¸Žæˆå‰§ã€Š<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E4%BD%A0%E7%9A%84%E5%AD%A9%E5%AD%90%E4%B8%8D%E6%98%AF%E4%BD%A0%E7%9A%84%E5%AD%A9%E5%AD%90.md#1">ä½ çš„å­©å­ä¸æ˜¯ä½ çš„å­©å­</a>â€”å¦ˆå¦ˆçš„é¥æŽ§å™¨ã€‹çš„æ‹æ‘„ã€‚ï¼ˆé˜¿æ–—å·¥ä½œå®¤æä¾›ï¼‰</figcaption></figure>
+<p>çºªå½•ç‰‡çš„ç¬¬ä¸€ä¸ªå†…å®¹æ˜¯åˆ˜äº®ä½æ•™å„¿å­<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E5%88%AE%E8%83%A1%E5%AD%90.md#1">åˆ®èƒ¡å­</a>ï¼Œå½“æ—¶çˆ¶äº²åœ¨ä»–14å²é‚£å¹´è¿‡ä¸–ï¼Œä»Žæ¥æ²¡æ•™ä»–åˆ®èƒ¡å­ï¼Œâ€œæˆ‘ä»Žå°çœ‹ç€çˆ¶äº²åˆ®èƒ¡å­ï¼Œä¹‹åŽå°±è‡ªå·±æ‘¸ç´¢ã€‚â€åˆ˜äº®ä½åˆè¯´ï¼Œâ€œåœ¨æ•™é“¨é“¨åˆ®èƒ¡å­è¿‡ç¨‹ä¸­æ„Ÿå—å¾ˆå¤šï¼Œè¿™æ˜¯ä»¥å‰æˆ‘æ‰€æ²¡æ„Ÿå—åˆ°çš„çˆ¶å­äº²å¯†äº¤æµæ—¶é—´ã€‚â€</p>
+<p>åˆ˜å­é“¨é€éœ²ï¼Œ<ahref="https://github.com/tcgkzq3248/djy/blob/master/gb/tag/%E5%88%AE%E8%83%A1%E5%AD%90.md#1">åˆ®èƒ¡å­</a>è¿™ä»¶äº‹æ˜¯ä¸€ä¸ªç”·å­©é•¿å¤§çš„è¿‡ç¨‹ï¼Œâ€œå½“æ—¶çˆ¸çˆ¸åœ¨æ•™æˆ‘åˆ®èƒ¡å­æ—¶ï¼Œè‡ªå·±è¿˜å› ä¸ç†Ÿæ‚‰åˆ®èƒ¡åˆ€ç”¨æ³•å·®ä¸€ç‚¹æŠŠè„¸åˆ®æµè¡€ï¼â€</p>
+<p>â€œç¬¬ä¸€æ¬¡çœ‹åˆ°é“¨é“¨å®Œæ•´è¡¨æ¼”æ˜¯åœ¨æˆå‰§çš„é¦–æ˜ ä¼šï¼Œçœ‹åˆ°æœ€åŽä¸€é¢—é•œå¤´é“¨é“¨åœ¨è¤å¹•ä¸Šå“­æƒ¨æ¨¡æ ·ï¼Œæˆ‘çš„çœ¼æ³ªå°±å•ªå•ªå•ªæŽ‰ä¸‹æ¥äº†ï¼Œè¿™ä¸€å¹•æˆ‘æ°¸è¿œä¸ä¼šå¿˜ã€‚â€åˆ˜äº®ä½å¿ƒç–¼å„¿å­è¦æ‹æ‘„è¶…è¿‡ä»–å®žé™…å¹´é¾„çš„è§’è‰²ï¼Œæ›¾æœ‰è¿‡èº«ä¸ºçˆ¶äº²çš„æ‹…å¿§ï¼Œåå¤é—®è‡ªå·±ï¼Œâ€œè¿™ä¸ªè§’è‰²å¯¹äºŽé“¨é“¨æ¥è¯´æ˜¯ä¸æ˜¯å¤ªæ—©äº†ï¼Ÿâ€</p>
+<p>åˆ˜å­é“¨é€éœ²ï¼Œä¸¤å¹´å‰çˆ¸çˆ¸æ›¾å¯¹ä»–è¯´ï¼Œâ€œä½ é•¿å¤§äº†ï¼Œæˆ‘ä¸ä¼šå†ç§°èµžä½ äº†ã€‚â€å› æ­¤ï¼Œå½“åˆé€‰æ‹©æ‹æ‘„ã€Šå¦ˆå¦ˆçš„é¥æŽ§å™¨ã€‹ï¼Œå¸Œæœ›èƒ½åœ¨çˆ¸çˆ¸å·²ç»å·¥ä½œ30å¹´çš„é¢†åŸŸä¸­ï¼Œç”¨è‡ªå·±çš„åŠ›é‡èŽ·å¾—çˆ¸çˆ¸çš„è‚¯å®šã€‚</p>
+<p>åˆ˜äº®ä½å¼€å¿ƒå„¿å­äº«å—æ‹æˆçš„è¿‡ç¨‹ï¼Œèµ°è¿›è¿™ä¸ªå–œæ¬¢å´é™Œç”Ÿçš„ä¸–ç•Œï¼Œâ€œæˆ‘çŸ¥é“é“¨é“¨è·Ÿ30å¹´å‰çš„æˆ‘ä¸€æ ·å¼€å§‹çˆ±ä¸Šè¡¨æ¼”äº†ã€‚â€åˆ˜äº®ä½æé†’å„¿å­ï¼Œè¦å®Œæˆä¸€ä¸ªå¥½ä½œå“æ²¡æœ‰æ·å¾„ï¼Œè¦åƒç»‡ä¸€å—æ¼‚äº®çš„å¸ƒä¸åœåœ°æ€è€ƒå’Œç¼–ç»‡æ‰èƒ½å®Œæ•´ã€‚</p>
+<p>æ­¤å¤–ï¼Œæœ¬å±Šé‡‘é’Ÿå¥–ï¼Œåˆ˜å­é“¨ä¹Ÿä¸Žå‰§ç»„äººå‘˜ä¸€èµ·è¸ä¸Šçº¢æ¯¯ï¼Œå¦è¨€è¿™æ˜¯é¦–æ¬¡ä»¥è‡ªå·±çš„æˆå‰§ä½œå“èµ°æ˜Ÿå…‰å¤§é“ï¼Œæ—¢ç´§å¼ åˆå…´å¥‹ï¼Œä¸Šä¸€æ¬¡åˆ™æ˜¯ä¸‰å¹´å‰çˆ¸çˆ¸å…¥å›´ã€Šé“œæ¿å°‘å¹´ã€‹ç”·é…è§’å¥–ï¼Œå› å·¥ä½œä¸å…‹å‡ºå¸­ï¼Œä»£æ›¿çˆ¸çˆ¸èµ°çº¢æ¯¯ï¼Œå› æ­¤è¿™æ¬¡çš„å¿ƒæƒ…æ¯”è¾ƒè½»æ¾ã€‚</p>
+<p><center><a src=""></a><a href="https://git.io/Jtbaj"><img width="600" src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/djtsp.jpg" title="è¿›å…¥åŽŸæ–‡è§‚çœ‹"  alt="è¿›å…¥åŽŸæ–‡è§‚çœ‹"></a><h3 align=center>(è§†é¢‘.å›½å†…å»ºè®®ä¸‹è½½<a href="https://github.com/tcgkzq3248/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>è¿›å…¥åŽŸæ–‡è§‚çœ‹)</h3><hr><a src="https://www.youtube.com/embed/81zxhhR97Jk?controls=0" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ¢æ¢¦ç«¹</p>
+	
+<hr>
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/10/11/n11582091.htm">ÁõÁÁ×ôÆØ¸¸°®ÀñÎï ¼ÇÂ¼¶ù×Ó14ËêÊ×´ÎÅÄÏ·</a>
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/20/n11465994.htm">³ÂÍ¥ÄÝÏàÐÅÂÖ»Ø Ð¡Þ¹º°»°ÏëÑÝ¶àÖØÈË¸ñ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/6/11/n10474174.htm">ÁõÁÁ×ôÙÉË§¶ù´³ÐÇÂ· Áõ×Óîýµ£¸ÙÐ¡ÄÐÖ÷½Ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/12/24/n9987837.htm">¡¾ÄêÖÕÅÌµã¡¿2017ÄêÈ«ÇòÊ®´óÓéÀÖÐÂÎÅ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/5/4/n9105251.htm">ºÃÇÉ£¡ÎèÌ¨¾çÑ²ÑÝ¶þÄê Å®Ö÷½ÇÃÇ½ÓÁ¬´«Ï²Ñ¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/5/3/n9100822.htm">ÕÔÐ¡ÇÈ×Ô½ÒÍùÊÂ ÓëºìÄïÕÅ±¾ÓåÏÕ³ÉÇéµÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/4/26/n9076374.htm">¸öÐÔËæÐËÓöÉÏÌôÌÞ·ò ÑîÇ§ö¬ÆØÐÂ»éºóÄÑÊÊÓ¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/3/29/n8980758.htm">ÕÔÐ¡ÇÈÙÉ·ò·ÅÉÁ 4ÔÂ³åÉþ»éÏëÉúÈýÌ¥</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/3/29/n8977883.htm">ÕÔÐ¡ÇÈ´«Ï²Ñ¶ ½«ÓëÁõÁÁ×ô½áÎª·òÆÞ</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11581115.htm">ÖÆÔìËàÉ±¿Ö²À ÖÐ¹²¹«¿ª½±Àø×²ÈËË¾»ú52Íò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11580996.htm">Àî¼Î³ÏÔÙÅ×´óÁ¬×Ê²ú ÈÚ´´40ÒÚÔª½ÓÅÌ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11581259.htm">Ã³Ò×Ì¸ÅÐ½øÕ¹ºÜË³Àû ´¨ÆÕÖÜÎåÏÂÎç¼ûÁõº×</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11581114.htm">»ªÎªMate30ÎªºÎÔÚÖÐ¹úÂô²»¹ýiPhone 11£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/29/n11554590.htm">Ô¤ÑÔÖÐµÄÖÐ¹²ÃðÍöÊ±¼ä¼°Ç°ºóÖØ´óÊÂ¼þ£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/4/n11568273.htm">±»Çú½âµÄ³ÉÓï£ºñºñ»ÊçÅ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/2/n11563658.htm">´«Ææ²ÅÅ®ÕÅ°®ÁáÌÓµ½Ïã¸ÛµÄÇ°Ç°ºóºó£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/23/n11539994.htm">¿µÎõ»ÊµÛÐ´µÃÒ»ÊÖºÃ×Ö ÓÐÊ²Ã´ÇÏÃÅ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577534.htm">ÑÛÁ¦´ó¿¼Ñé ÄãÄÜÔÚÕâÕÅÕÕÆ¬ÖÐÕÒµ½±ª×ÓÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/8/n11576651.htm">¡¶À¶²¨£º×îºóÒ»µÎÑª¡·Ó°ÆÀ£ºÒ»´ú´«ÆæÍêÃÀÐ»Ä»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577364.htm">Ö±´¥ÖÐ¹²½û¼É ¡¶ÄÏ·½ËÄ¼ú¿Í¡·Á¬µÀÇ¸¶¼³¬Ëá</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11578053.htm">ÖÓÐÀÁèÇÃÏì½ðÖÓºó ÏÂ²¿Ï·½«ÓëÍõÉÙÎ°ÑÝÄ¸×Ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11578498.htm">Mina»¨ÐõÖÐÏò·ÛË¿Ëµ»° ÔÙÕ¹Ð¦ÑÕÁî·ÛË¿¸Ð¶¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577291.htm">¡¾ÅÄ°¸¾ªÆæ¡¿NBA×Ü²Ã×ªÇ¿Ó² ´¨ÆÕÔÙÍ¦Ïã¸Û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/6/18/n10494192.htm">¡¾Ãû¾ä¹ÊÊÂ¡¿ÊÔÓñÒªÉÕÈýÈÕÂú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11580791.htm">¡¾ÐÂÎÅ¿´µã¡¿NBAÊÂ¼þË­Êä£¿ÈýÒòËØ±±¾©Ìø½Å</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577534.htm">ÑÛÁ¦´ó¿¼Ñé ÄãÄÜÔÚÕâÕÅÕÕÆ¬ÖÐÕÒµ½±ª×ÓÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11578774.htm">±©Ñ©ÓéÀÖÏòÖÐ¹²ßµÍ· È«ÇòÓÎÏ·ÉçÍÅÈºÆðµÖÖÆ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577528.htm">·ÖÎö£ºÁõº×´Ë´Î¸°ÃÀµÄÈý¸ö²»Ñ°³£Ö®´¦</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/13/8/28/n3951438.md#1">ç¾Žå›½ç ´åƒµå±€  ä¸–é’çƒ­èº«èµ›èµ¢ä¸­åŽ</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/17/3/29/n8977883.md#1">èµµå°ä¾¨ä¼ å–œè®¯ å°†ä¸Žåˆ˜äº®ä½ç»“ä¸ºå¤«å¦»</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/17/3/29/n8980758.md#1">èµµå°ä¾¨å•å¤«æ”¾é—ª 4æœˆå†²ç»³å©šæƒ³ç”Ÿä¸‰èƒŽ</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/17/4/26/n9076374.md#1">ä¸ªæ€§éšå…´é‡ä¸ŠæŒ‘å‰”å¤« æ¨åƒéœˆæ›æ–°å©šåŽéš¾é€‚åº”</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/woywz155/djy/blob/master/gb/19/10/11/n11582091.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/woywz155/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/woywz155/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/woywz155/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/4/n11631409.md#1" target="_blank">æ­£å…ƒï¼šä¸­å…±åŒªå¸®éžæˆ‘ä¸­åŽä¹‹é‚¦</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/3/29/n2063507.md#1" target="_blank">æ˜¯è‡ªç„šè¿˜æ˜¯éª—å±€ï¼Ÿ</a></li><hr>
+
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/22/n12767168.md#1">è¾›ä¸‘å…«å¦2021å¹´ä¸¤å²¸å›½è¿</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/19/n12762219.md#1">è§£å¯†æ–‡ä»¶ï¼šç¾ŽCIAæˆ–è§‚å¯Ÿåˆ°ç«æ˜Ÿä¸Šçš„å¤ä»£äººç±»</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/20/12/30/n12653772.md#1">ã€å‘½ç†ã€‘ç›¸å£«ç®—ä»–æ´»ä¸è¿‡30å² ä¸ºä½•ä¸åº”éªŒï¼Ÿ</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/21/n12765804.md#1">é¢„è¨€ä¸­çš„å¤§ç˜Ÿç–«å’Œä¸­å›½å˜å±€</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/10/n12744730.md#1">é¢„è¨€è¯•æžï¼ˆ8ï¼‰ä¸Šæµ·çš„å‘½è¿å’ŒæŠ‰æ‹©</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12775088.md#1">ã€è´¢å•†å¤©ä¸‹ã€‘ä¸œåŒ—äººå£å±æœº å…¨å›½çˆ†å‘å‰å…†ï¼Ÿ</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12775571.md#1">ã€ç›´æ’­é¢„å‘Šã€‘2021ä¿å®ˆæ´¾å¤§ä¼šé¦–æ—¥ æ”¿è¦å‘è¨€</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12775599.md#1">ã€ç§¦é¹ç›´æ’­ã€‘ä¹ è¿‘å¹³ä¸€å¥è¯è®©å¯Œäººä¸å¯’è€Œæ —</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12770771.md#1">ä¸­å›½äººå¯¿è´ªè…ä¸¥é‡ å¥³å‘˜å·¥ä¸¾æŠ¥é­æŠ¥å¤</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12770213.md#1">è´¾åº†æž—å®¶æ—è…è´¥å†…å¹•å†è¢«æ‘†ä¸Šå°é¢</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/24/n12772903.md#1">å¤§é™†â€œä¼šè®¡æ‰€ä¸€å“¥â€æ¿’ä¸´å€’é—­ äººåŽ»æ¥¼ç©º</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12769489.md#1">æž—å¿—çŽ²å¤«å¦‡é¦–åº¦åˆä½“ä»£è¨€ AKIRAå…¨ç¨‹ä¸­æ–‡åº”ç­”</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12769457.md#1">Janeté€Ÿäº§äºŒèƒŽä¸åˆ°3å°æ—¶â€œæ¥ä¸åŠæ‰“æ— ç—›åˆ†å¨©â€</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/24/n12773132.md#1">å­™ä¿ªèŽ·å¥½å‹èµ äºŒæ‰‹ç«¥è£… å°èŠ±çœŸå®žååº”æ„ŸåŠ¨ç½‘å‹</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/25/n12774018.md#1">æŽç¿Šå›åœ¨å®¶ä¸æ…Žæ»‘å€’ è„¸é­é‡å‡»â€œæ•´ç‰‡å‘é»‘â€</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12770447.md#1">å´å­Ÿè¾¾é­è°£ä¼ ç½¹ç™ŒåŽ»ä¸– å‹äººç”°å¯æ–‡æ–¥é™†åª’ç¼ºå¾·</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/24/n12772677.md#1">9ç§é£Ÿç‰©æ˜¯â€œå¤©ç„¶è‚ èƒƒè¯â€ æ”¹å–„èƒƒé£Ÿé“é€†æµ</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12768699.md#1">ç¼ºä¹ç»´ç”Ÿç´ Dæ˜“æ„ŸæŸ“æ–°å†  1æ‹›è¡¥å……æœ€å¿«</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/23/n12770063.md#1">æ˜¥å¤©æ˜¯è½»æ¾å‡è‚¥å’ŒæŽ’æ¯’çš„ç»ä½³æ—¶æœº</a></li>
+<li><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/21/2/24/n12771951.md#1">è‘¡è„ç‰™å…·æœ‰ç‰¹è‰²çš„æ˜Ÿå½¢åŸŽå ¡ æ˜“å®ˆéš¾æ”»</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tcgkzq3248/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tcgkzq3248/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/10/11/n11582091.htm">åˆ˜äº®ä½æ›çˆ¶çˆ±ç¤¼ç‰© è®°å½•å„¿å­14å²é¦–æ¬¡æ‹æˆ</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/tcgkzq3248/djy/blob/master/gb/19/10/11/n11582091.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tcgkzq3248/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tcgkzq3248/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tcgkzq3248/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcgkzq3248/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
